openshift/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: testapp
spec:
  selector:
    app: testapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
