openshift/route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: testapp
spec:
  to:
    kind: Service
    name: testapp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 8080
